--- a/views/LOGIN.ejs
+++ b/views/LOGIN.ejs
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="Recursos/css/estilo.css">
 </head>
 <body lang="es-CO" dir="ltr">
-
+<script>
+</script>
 <header>
 <div id="logo"></div>
 <!-- menu principal -->
@@ -65,6 +66,7 @@
 
 <p>Desarrolado por Jesssid - 2024</p>
 </footer>
-<script type="text/javascript" src="code.js" ></script>
+<script type="text/javascript" src="code.js" >
+</script>
 </body>
 </html>
