--- a/views/CONTACTO.ejs
+++ b/views/CONTACTO.ejs
@@ -21,7 +21,7 @@
 	<div id="log">
 		<%if(!login){%>
 			<ul>
-				<li><a href="LOGIN">INICIAR SESIÓN</a></li>
+				<li><a  href="LOGIN">INICIAR SESIÓN</a></li>
 				<li><a href="SINGIN">USUARIO NUEVO</a></li>
 			</ul>
 			<%}else{%>
@@ -63,7 +63,7 @@
 				<td><textarea name="mensaje" id="mensaje" rows="10" placeholder="Ingrese su mensaje" required></textarea></td>
 			</tr>
 			<tr></tr>
-				<th colspan="2"><button type="submit">Enviar</button></th>
+				<th colspan="2"><button type="submit" id="boton">Enviar</button></th>
 			</tr>
 		</table>
 	</form>
