--- a/views/CREARCLIENTE.ejs
+++ b/views/CREARCLIENTE.ejs
@@ -61,7 +61,7 @@
 				<td><input type="text" name="direccion" placeholder="Ingrese la dirección" required></td>
 			</tr>
 			<tr></tr>
-				<th colspan="2"><button type="submit">Enviar</button></th>
+				<th colspan="2"><button type="submit" id="boton">Enviar</button></th>
 			</tr>
 		</table>
 	</form>
