--- a/views/CREARCONTRATO.ejs
+++ b/views/CREARCONTRATO.ejs
@@ -91,7 +91,7 @@
 				<td><input type="date" name="fecha" id="fecha"required></td>
 			</tr>
 			<tr>
-				<th colspan="2"><button type="submit">BUSCAR</button></th>
+				<th colspan="2"><button type="submit" id="boton">Enviar</button></th>
 			</tr>
 				
 		</table>
