--- a/views/LOGIN.ejs
+++ b/views/LOGIN.ejs
@@ -45,7 +45,7 @@
 				<td><input type="password" name="pass" id="pass"></td>
 			</tr>
 			<tr>
-				<th colspan="2"><button type="submit">Ingresar</button></th>
+				<th colspan="2"><button type="submit" id="boton">Ingresar</button></th>
 			</tr>
 			<tr>
 				<th colspan="2"><a href="http://" target="_blank" rel="noopener noreferrer">Recordar contraseña</a></th>
