--- a/views/SERVICIOS.ejs
+++ b/views/SERVICIOS.ejs
@@ -37,8 +37,8 @@
 <div id="contenido">
 <div id="sevicio">
     <%if(login){%>
-        <a class="servicios" href="CONTRATOS">Ver Contratos</a>
-        <a class="servicios" href="CREARCONTRATO"  id="crear">Crear Contratos</a>
+        <a class="boton2" href="CONTRATOS">Ver Contratos</a>
+        <a class="boton2" href="CREARCONTRATO"  id="crear">Crear Contratos</a>
     <%}%>
     <h1 class="servicios" id="instalaciones">Servicio de Instalación</h1>
     <div class="descripcion" id="info-instalaciones">
