--- a/views/SINGIN.ejs
+++ b/views/SINGIN.ejs
@@ -21,8 +21,8 @@
 	<!-- menu de login y singin -->
 	<div id="log">
 		<ul>
-			<li><a href="LOGIN">INICIAR SESIÓN</a></li>
-			<li><a href="#">USUARIO NUEVO</a></li>
+			<li><a class="boton2" href="LOGIN">INICIAR SESIÓN</a></li>
+			<li><a class="boton2" href="#">USUARIO NUEVO</a></li>
 		</ul>
 	</div>
 </header>
@@ -55,7 +55,7 @@
 				<td><input type="password" name="pass" id="pass" required	></td>
 			</tr>
 			<tr>
-				<th colspan="2"><button type="submit">Registrarse</button></th>
+				<th colspan="2"><button type="submit" id="boton">Registrarse</button></th>
 			</tr>
 			<tr>
 				<th colspan="2"><a href="LOGIN" rel="noopener noreferrer">Cancelar</a></th>
