--- a/views/CONTRATOS.ejs
+++ b/views/CONTRATOS.ejs
@@ -62,7 +62,7 @@
 
                         <td> 
                             <input name="id_orden" type="text" value="<%=ordenes[i].Orden%>" style="visibility: hidden;width: 10px;" readonly >
-                            <input type="submit" style="width: 100px;" value="Eliminar">
+                            <input type="submit" id="boton" style="width: 100px;" value="Eliminar">
                         </td>
                     </form>    
                 <%}%>
